--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bilidown",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "",
-  "bin":"bin/bilidown",
+  "bin": "bin/bilidown",
   "main": "lib/bilidown.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^2.8.1",
-    "download": "^4.2.0"
+    "request": "^2.61.0"
   }
 }
