--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "luMinO",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/luminocean/bilidown.git"
+  },
+  "license": "MIT",
   "dependencies": {
     "commander": "^2.8.1",
     "request": "^2.61.0"
